Revert Refaster rule changes